# s-renderer

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_commands.json
examples/: CMakeLists.txt  example1.cpp
include/engproj/: engproj.hpp
include/engproj/data_structures/: boundedLRUmap.hpp  command_queue.hpp
include/engproj/gl_utils/: buffers.hpp  buffertype.hpp  context.hpp  manager.hpp  shader.hpp  shader_stage.hpp  viewport.hpp  window.hpp
include/engproj/gl_utils/passes/: pipeline_w.hpp
include/engproj/gl_utils/renderer/: render_cmd.hpp  render_device.hpp  renderer.hpp
include/engproj/gl_utils/workers/: pipeline_w.hpp
include/engproj/logger/: logger.hpp
include/engproj/sdl_utils/: sdl_init.hpp
src/: main.cpp
src/gl_utils/: buffers.cpp  context.cpp  manager.cpp  pipeline.cpp  shader.cpp  shader_stage.cpp  viewport.cpp  window.cpp
src/gl_utils/passes/: pipeline_w.cpp
src/gl_utils/renderer/: render_cmd.cpp  render_device.cpp  render_pass.cpp  renderer.cpp
src/gl_utils/workers/: pipeline_w.cpp
src/logger/: logger.cpp
src/sdl_utils/: sdl_init.cpp
